backend/check_final.txt
warning: mitra-backend@0.1.0: Proto files compiled successfully
    Checking mitra-backend v0.1.0 (/Users/achinth/Desktop/Code/mitra/backend)
warning: unused import: `AppResult`
 --> src/grpc_service.rs:6:30
  |
6 | use crate::error::{AppError, AppResult};
  |                              ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
  --> src/grpc_service.rs:10:5
   |
10 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `info`
  --> src/grpc_service.rs:13:22
   |
13 | use tracing::{error, info};
   |                      ^^^^

warning: unused import: `EventStatus`
 --> src/services/event_service.rs:4:28
  |
4 | use crate::models::{Event, EventStatus};
  |                            ^^^^^^^^^^^

warning: unused import: `Payout`
 --> src/services/betting_service.rs:4:26
  |
4 | use crate::models::{Bet, Payout, Transaction, TransactionType, UserGroupBalance};
  |                          ^^^^^^

warning: unused import: `error`
  --> src/services/betting_service.rs:13:21
   |
13 | use tracing::{info, error};
   |                     ^^^^^

warning: unused variable: `database_url`
  --> src/database/pool.rs:74:35
   |
74 | pub async fn create_pool_from_url(database_url: &str) -> Result<PgPool, DatabaseError> {
   |                                   ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_database_url`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `id`
   --> src/repositories/bet_repository.rs:183:9
    |
183 |         id: Uuid,
    |         ^^ help: if this is intentional, prefix it with an underscore: `_id`

warning: unused variable: `committed_slot`
   --> src/repositories/bet_repository.rs:184:9
    |
184 |         committed_slot: i64,
    |         ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_committed_slot`

warning: unused variable: `merkle_proof`
   --> src/repositories/bet_repository.rs:185:9
    |
185 |         merkle_proof: &serde_json::Value,
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_merkle_proof`

warning: unused variable: `merkle_root`
  --> src/services/emergency_withdrawal.rs:53:14
   |
53 |         let (merkle_root, proofs) = self.state_manager
   |              ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_merkle_root`

warning: unused variable: `event_pubkey`
  --> src/services/emergency_withdrawal.rs:71:9
   |
71 |         event_pubkey: &str,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_event_pubkey`

warning: unused variable: `proof`
  --> src/services/emergency_withdrawal.rs:72:9
   |
72 |         proof: &MerkleProof,
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_proof`

warning: unused variable: `event_pubkey`
  --> src/services/emergency_withdrawal.rs:87:9
   |
87 |         event_pubkey: &str,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_event_pubkey`

warning: unused variable: `oracle_data`
   --> src/services/settlement.rs:348:9
    |
348 |         oracle_data: &HashMap<String, String>,
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_oracle_data`

error[E0061]: this method takes 6 arguments but 4 arguments were supplied
   --> src/grpc_service.rs:493:14
    |
493 |               .claim_winnings(
    |  ______________^^^^^^^^^^^^^^-
494 | |                 &req.user_wallet, 
495 | |                 event_id, 
496 | |                 &req.signature, 
497 | |                 chrono::Utc::now().timestamp()
498 | |             )
    | |_____________- two arguments of type `u64` and `&str` are missing
    |
note: method defined here
   --> src/services/betting_service.rs:296:18
    |
296 |     pub async fn claim_winnings(
    |                  ^^^^^^^^^^^^^^
...
301 |         amount_usdc: u64,
    |         ----------------
302 |         signature: &str,
    |         ---------------
help: provide the arguments
    |
493 ~             .claim_winnings(
494 +                 &req.user_wallet,
495 +                 event_id,
496 +                 &req.signature,
497 +                 /* u64 */,
498 +                 /* &str */,
499 +                 chrono::Utc::now().timestamp(),
500 +             )
    |

warning: use of deprecated associated function `solana_sdk::signature::Keypair::from_bytes`: Use Keypair::try_from(&[u8]) instead
   --> src/solana_client/anchor_client.rs:122:32
    |
122 |         let keypair = Keypair::from_bytes(&keypair)
    |                                ^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated associated function `solana_sdk::signature::Keypair::from_bytes`: Use Keypair::try_from(&[u8]) instead
   --> src/solana_client/anchor_client.rs:140:22
    |
140 |             Keypair::from_bytes(&keypair_bytes)
    |                      ^^^^^^^^^^

warning: use of deprecated associated function `solana_sdk::signature::Keypair::from_bytes`: Use Keypair::try_from(&[u8]) instead
   --> src/solana_client/anchor_client.rs:147:22
    |
147 |             Keypair::from_bytes(&keypair_bytes)
    |                      ^^^^^^^^^^

warning: variable `level` is assigned to, but never used
   --> src/state_manager.rs:123:17
    |
123 |         let mut level = 0;
    |                 ^^^^^
    |
    = note: consider using `_level` instead

For more information about this error, try `rustc --explain E0061`.
warning: `mitra-backend` (lib) generated 19 warnings
warning: mitra-backend@0.1.0: Proto files compiled successfully
error: could not compile `mitra-backend` (lib) due to 1 previous error; 19 warnings emitted
